--- a/Escriurem/Escriurem.vbproj
+++ b/Escriurem/Escriurem.vbproj
@@ -69,6 +69,8 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ACII.vb" />
+    <Compile Include="CuartaParte.vb" />
     <Compile Include="Module1.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
@@ -85,6 +87,10 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="PrimeraParte.vb" />
+    <Compile Include="QuintaParte.vb" />
+    <Compile Include="SegundaParte.vb" />
+    <Compile Include="TerceraParte.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
